# FTInspector

./: .gitignore  CMakeLists.txt
doc/: a.py  lisent
include/ftinspector/: tcpproxy.h
src/: main.c  tcpproxy.c
